--- a/index.html
+++ b/index.html
@@ -14,12 +14,24 @@
     <body class="container-fluid">
       <h1>Hilary's Tic-Tac-Toe Game</h1>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-      eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-      ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-      est laborum.</p>
+<div id="game-board" class="gameBoard">
+      <div class="row">
+  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 box" id="square-0"></div>
+  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 box" id="square-1"></div>
+  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 box" id="square-2"></div>
+</div>
+
+<div class="row">
+  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 box" id="square-3"></div>
+  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 box" id="square-4"></div>
+  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 box"id="square-5"></div>
+</div>
+
+<div class="row">
+  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 box"id="square-6"></div>
+  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 box"id="square-7"></div>
+  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 box"id="square-8"></div>
+</div>
+</div>
     </body>
 </html>
