--- a/index.html
+++ b/index.html
@@ -63,5 +63,12 @@
     <input type="submit" name="submit" value="Change password">
   </fieldset>
 </form>
+
+<form id="sign-out">
+  <fieldset>
+    <legend>Sign Out</legend>
+    <input type="submit" name="submit" value="Sign out">
+  </fieldset>
+</form>
     </body>
 </html>
