--- a/index.html
+++ b/index.html
@@ -33,5 +33,12 @@
   <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 box"id="square-8"></div>
 </div>
 </div>
+
+<form id="new-game">
+  <fieldset>
+    <legend>Start new game</legend>
+    <input type="submit" name="submit" value="Start a new game">
+  </fieldset>
+</form>
     </body>
 </html>
