--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
   <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 box"id="square-8"></div>
 </div>
 </div>
+<div id="game-message"></div>
 
-<<<<<<< HEAD
 <h1>User Actions</h1>
 <div id="message"></div>
 <form id="sign-up">
