--- a/index.html
+++ b/index.html
@@ -16,24 +16,25 @@
 
 <div id="game-board" class="gameBoard">
       <div class="row">
-  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 box" id="square-0"></div>
-  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 box" id="square-1"></div>
-  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 box" id="square-2"></div>
+  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 box" id="0"></div>
+  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 box" id="1"></div>
+  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 box" id="2"></div>
 </div>
 
 <div class="row">
-  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 box" id="square-3"></div>
-  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 box" id="square-4"></div>
-  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 box"id="square-5"></div>
+  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 box" id="3"></div>
+  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 box" id="4"></div>
+  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 box"id="5"></div>
 </div>
 
 <div class="row">
-  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 box"id="square-6"></div>
-  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 box"id="square-7"></div>
-  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 box"id="square-8"></div>
+  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 box"id="6"></div>
+  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 box"id="7"></div>
+  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 box"id="8"></div>
 </div>
 </div>
 <div id="game-message"></div>
+<div id="winner-message"></div>
 
 <h1>User Actions</h1>
 <div id="message"></div>
