Debugged API Auth
I can create a user, sign in, sign out, and change pw now, woohoo

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <div id="winner-message"></div>
 
 <h1>User Actions</h1>
-<div id="message"></div>
+<div id="user-action-message"></div>
 <form id="sign-up">
   <fieldset>
     <legend>Create User</legend>
