Added createGame scripts
html button, curl script, event function, ajax request

--- a/index.html
+++ b/index.html
@@ -70,12 +70,13 @@
   <fieldset>
     <legend>Sign Out</legend>
     <input type="submit" name="submit" value="Sign out">
-=======
+  </fieldset>
+</form>
+
 <form id="new-game">
   <fieldset>
     <legend>Start new game</legend>
-    <input type="submit" name="submit" value="Start a new game">
->>>>>>> game-logic
+    <input type="submit" name="submit" value="New Game">
   </fieldset>
 </form>
     </body>
