updates to game logic. can pull back games played now and interface is cleaner

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 </div>
 <div id="game-message"></div>
 <div id="winner-message"></div>
+<div id="stats-message"></div>
 
 <h2 id="sign-in-message">Sign up or sign in to play!</h2>
 <div id="user-action-message"></div>
@@ -77,6 +78,13 @@
   <fieldset>
     <legend>Start new game</legend>
     <input type="submit" name="submit" value="New Game">
+  </fieldset>
+</form>
+
+<form id="game-stats">
+  <fieldset>
+    <legend>Game Stats</legend>
+    <input type="submit" name="submit" value="See Player Stats">
   </fieldset>
 </form>
     </body>
