--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </fieldset>
 </form>
 
-<form id="game-stats">
+<form id="game-stats" style="display: none">
   <fieldset>
     <legend>Game Stats</legend>
     <input type="submit" name="submit" value="See Player Stats">
