--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 <form id="new-game" style="display: none">
   <fieldset>
-    <legend>Start new game</legend>
+    <legend>Start A new game</legend>
     <input type="submit" name="submit" value="New Game">
   </fieldset>
 </form>
