don't know why the game board wasn't hidden on master

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body class="container-fluid">
       <h1>Hilary's Tic-Tac-Toe Game</h1>
 
-<div id="game-board" class="gameBoard">
+<div id="game-board" class="gameBoard" style="display: none">
 <div class="row">
   <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 box" id="square-0"></div>
   <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 box" id="square-1"></div>
